--- a/view/layout.html
+++ b/view/layout.html
@@ -1,16 +1,142 @@
 <!DOCTYPE html>
-<html lang="br">
+<html lang="pt-BR">
+
     <head>
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Exemplo de Aula">
-        <meta name="author" content="{{autor}}">
-        <title>{{titulo}}</title>
-    </head>
-    <body>
-        {% block content %}
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-        {% endblock %}
+        <title>{{titulo}}</title>
+
+        <!-- Bootstrap Core CSS -->
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom CSS -->
+        <link href="/css/shop-item.css" rel="stylesheet">
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+            {% if msg %}
+        <script>
+            window.alert('{{ msg }}');
+        </script>
+        {% endif %}
+    </head>
+
+    <body>
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Barra de Navega&ccedil;&atilde;o</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">{{titulo}}</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        {% if user %}
+                        <li>
+                            <a href="/cliente">Clientes</a>
+                        </li>
+                        <li>
+                            <a href="/fornecedor">Fornecedores</a>
+                        </li>
+                        <li>
+                            <a href="/produto">Produtos</a>
+                        </li>
+                        <li>
+                            <a href="/compra">Compras</a>
+                        </li>
+                        <li>
+                            <a href="/venda">Vendas</a>
+                        </li>
+                        <li>
+                            <a href="/usuario">Usu&aacute;rios</a>
+                        </li>
+                        
+                        <li>
+                            <a href="/sair">Sair</a>
+                        </li>
+                        {% else %}
+                        <li>
+                            <a href="/entrar">Entrar</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+
+        <!-- Page Content -->
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-md-3">
+                    <p class="lead">Estoque Aula</p>
+                    <div class="list-group">
+                        <a href="/" class="list-group-item">Inicial</a>
+                        {% if user %}
+                        <a href="/cliente" class="list-group-item">Clientes</a>
+                        <a href="/fornecedor" class="list-group-item">Fornecedores</a>
+                        <a href="/produto" class="list-group-item">Produtos</a>
+                        <a href="/compra" class="list-group-item">Compra</a>
+                        <a href="/venda" class="list-group-item">Venda</a>
+                        <a href="/usuario" class="list-group-item">Usu&aacute;rios</a>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="col-md-9">
+
+                    <!-- BLOCK CONTENT - INICIO -->
+                    {% block content %}
+
+                    {% endblock %}
+                    <!-- BLOCK CONTENT - FIM -->
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+        <div class="container">
+
+            <hr>
+
+            <!-- Footer -->
+            <footer>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>{{rodape}}</p>
+                    </div>
+                </div>
+            </footer>
+
+        </div>
+        <!-- /.container -->
+
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+
     </body>
+
 </html>
